src/styles/UpcomingWeekendSummary.module.scss
.wrapper {
  text-align: left;

  .circuitWrapper {
    display: flex;
    padding: 0.5em;

    .circuitDetails {
      display: flex;
      flex-direction: column;
      //flex-grow: 1;
      align-items: flex-start;

      .raceName {
        margin: 0;
      }
    }

    .trackImage {
      margin-top: 0.25em;
    }
  }

  .session {
    padding: 0.5em;
    margin: 1em 0;

    // Highlight the upcoming session
    &[data-is-upcoming="true"] {
      border: 2px solid green;
      background-color: #afccaf;
    }

    // Grey out sessions which are finished
    &[data-is-finished="true"] {
      color: grey;
      opacity: 80%;
    }

    .countdown {
      font-size: 1.2em;
      font-weight: bold;
      margin-top: 0.5em;
      margin-bottom: 0.25em;
    }
  }
}

